[SNAP-753] Reorganize tests-dunits to core+cluster
- Removed separate tests/dunit project and instead moved into core and cluster
- Added "dunitTest" tasks for above which run the *DUnitTest test classes with appropriate parameters
- Split the ExternalShellDUnitTest into SplitClusterDUnitTest and SnappyResourceEventsDUnitTest
  where former is in core and runs the split cluster against stock Spark while latter against snappy-spark;
  the test in core starts a separate snappy embedded cluster and uses JDBC connection into it to do the operations
  (and the new ComplexTypeSerializer added for serialization)
- Added target to download upstream spark distribution and unpack in dist/ (only once) for above test in core