@@ -83,6 +83,7 @@ allprojects {
     scalaBinaryVersion = '2.10'
     scalaVersion = scalaBinaryVersion + '.6'
     sparkVersion = '1.6.1'
+    sparkDistName = "spark-${sparkVersion}-bin-hadoop2.4"
     log4jVersion = '1.2.17'
     slf4jVersion = '1.7.12'
     junitVersion = '4.11'
@@ -103,6 +104,8 @@ allprojects {
   ext {
     testResultsBase = "${rootProject.buildDir}/tests/snappy"
     snappyProductDir = "${rootProject.buildDir}/snappy"
+    sparkDistDir = "${rootProject.projectDir}/dist"
+    sparkProductDir = "${sparkDistDir}/${sparkDistName}"
   }
 }
 
@@ -160,6 +163,9 @@ task cleanDUnit << {
   def workingDir = "${testResultsBase}/dunit"
   delete workingDir
   file(workingDir).mkdirs()
+  // clean spark cluster directories
+  delete "${snappyProductDir}/work", "${snappyProductDir}/logs"
+  delete "${sparkProductDir}/work", "${sparkProductDir}/logs"
 }
 task cleanAllReports << {
   def workingDir = "${testResultsBase}/combined-reports"
@@ -218,11 +224,34 @@ subprojects {
     jvmArgs '-XX:+HeapDumpOnOutOfMemoryError','-XX:+UseConcMarkSweepGC', '-XX:+CMSClassUnloadingEnabled',  '-XX:MaxPermSize=384m', '-ea'
     testLogging.exceptionFormat = 'full'
 
+    include '**/*.class'
+    exclude '**/*DUnitTest.class'
+
     workingDir = "${testResultsBase}/junit"
 
     binResultsDir = file("${workingDir}/binary/${project.name}")
     reports.html.destination = file("${workingDir}/html/${project.name}")
     reports.junitXml.destination = file(workingDir)
+  }
+  task dunitTest(type: Test) {
+    dependsOn ':cleanDUnit'
+    dependsOn ':product'
+    maxParallelForks = 1
+    minHeapSize '128m'
+    maxHeapSize '1g'
+
+    jvmArgs = ['-XX:+HeapDumpOnOutOfMemoryError', '-XX:MaxPermSize=384m', '-XX:+UseParNewGC', '-XX:+UseConcMarkSweepGC', '-XX:CMSInitiatingOccupancyFraction=50', '-XX:+CMSClassUnloadingEnabled', '-ea']
+
+    include '**/*DUnitTest.class'
+
+    workingDir = "${testResultsBase}/dunit"
+
+    binResultsDir = file("${workingDir}/binary")
+    reports.html.destination = file("${workingDir}/html")
+    reports.junitXml.destination = file(workingDir)
+
+    systemProperties 'java.net.preferIPv4Stack': 'true',
+                     'SNAPPY_HOME': snappyProductDir
   }
 
   gradle.taskGraph.whenReady({ graph ->
@@ -246,6 +275,7 @@ subprojects {
         }
 
         environment 'SNAPPY_HOME': snappyProductDir,
+          'APACHE_SPARK_HOME': sparkProductDir,
           'SNAPPY_DIST_CLASSPATH': "${sourceSets.test.runtimeClasspath.asPath}"
 
         def eol = System.getProperty('line.separator')
@@ -413,16 +443,16 @@ subprojects {
 }
 
 task publishLocal {
-  dependsOn subprojects.findAll { p -> !p.name.contains('tests-dunit') &&
-    p.name != 'gemfirexd-native' && p.name != 'gemfirexd-prebuild' &&
+  dependsOn subprojects.findAll { p -> p.name != 'gemfirexd-native' &&
+    p.name != 'gemfirexd-prebuild' &&
     p.name != 'gemfirexd' }.collect {
       it.getTasksByName('install', false).collect { it.path }
   }
 }
 
 task publishMaven {
-  dependsOn subprojects.findAll { p -> !p.name.contains('tests-dunit') &&
-    p.name != 'gemfirexd-native' && p.name != 'gemfirexd-prebuild' &&
+  dependsOn subprojects.findAll { p -> p.name != 'gemfirexd-native' &&
+    p.name != 'gemfirexd-prebuild' &&
     p.name != 'snappy-store' && p.name != 'gemfirexd' }.collect {
       it.getTasksByName('uploadArchives', false).collect { it.path }
   }
@@ -767,7 +797,6 @@ task runQuickstart(dependsOn: product) {
 task copyResourcesAll << {
   copyTestsCommonResources(project(":snappy-core_${scalaBinaryVersion}").buildDir)
   copyTestsCommonResources(project(":snappy-cluster_${scalaBinaryVersion}").buildDir)
-  copyTestsCommonResources(project(":tests-dunit_${scalaBinaryVersion}").buildDir)
   if (new File(rootDir, 'aqp/build.gradle').exists()) {
     copyTestsCommonResources(project(":snappy-aqp_${scalaBinaryVersion}").buildDir)
   }
@@ -785,8 +814,7 @@ task buildAll {
 }
 task checkAll {
   dependsOn ":snappy-core_${scalaBinaryVersion}:check",
-            ":snappy-cluster_${scalaBinaryVersion}:check",
-            ":tests-dunit_${scalaBinaryVersion}:test"
+            ":snappy-cluster_${scalaBinaryVersion}:check"
   if (new File(rootDir, 'aqp/build.gradle').exists()) {
     dependsOn ":snappy-aqp_${scalaBinaryVersion}:check"
   }
